--- a/assignment-one/index.html
+++ b/assignment-one/index.html
@@ -174,10 +174,12 @@
             </div>
         </div>
     </section>
-    <section>
-        <h1 class="fgh"><span class="wht"> Mission </span><span class="lkj"> 2022</span></h1>
+
+    <footer>
+        <h1><span class="wht"> Mission </span><span class="lkj"> 2022</span></h1>
         <h4>Hard work, Perseverance, and Determination for 2022</h4>
-    </section>
+    </footer>
+
 
 
 </body>
